--- a/Eshank Task 2.html
+++ b/Eshank Task 2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eshank's Portfolio</title>
-    <link rel="stylesheet" href="Portfolio.css">
+    <link rel="stylesheet" href="Eshank Task 2.css">
     <script src="https://kit.fontawesome.com/bdf4fde9de.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div id="header">
         <div class="container">
-            <nav>  
+            <nav>
                 <img src="logo-wbduPeg-W-transformed.png" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <div class="header-text"> 
+            <div class="header-text">
                 <p>WEB DEVELOPER</p>
                 <h1>Hello, I am <span>Eshank</span><br>I can design website for you</h1>
             </div>
@@ -159,10 +159,10 @@
             </div>
         <div class="contact-right">
             <form>
-                <input type="text" name="Name" placeholder="Enter Your Name" required>                
-                <input type="email" name="Email" placeholder="Enter Your Email address" required>                
+                <input type="text" name="Name" placeholder="Enter Your Name" required>
+                <input type="email" name="Email" placeholder="Enter Your Email address" required>
                 <textarea type="Message" rows="6" placeholder="Enter Your Message" required></textarea>
-                <button type="submit" class="btn2">Submit</button>               
+                <button type="submit" class="btn2">Submit</button>
             </form>
         </div>
         </div>
